Default mapping examples.
Signed-off-by: Martin Vojtek <martin.vojtek@oracle.com>

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -338,6 +338,11 @@
                 <version>1.0</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>org.glassfish</groupId>
+                <artifactId>javax.json</artifactId>
+                <version>1.0.4</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
