Fixed typo in inheritance example. Simplified EnumSet and EnumMap example. Generics concept will be fixed after some discussion.
Signed-off-by: Martin Vojtek <martin.vojtek@oracle.com>

--- a/examples/runtime/pom.xml
+++ b/examples/runtime/pom.xml
@@ -63,6 +63,11 @@
             <groupId>javax.json</groupId>
             <artifactId>javax.json-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.0.4</version>
+        </dependency>
     </dependencies>
     
 </project>
