--- a/examples/runtime/pom.xml
+++ b/examples/runtime/pom.xml
@@ -62,11 +62,8 @@
         <dependency>
             <groupId>javax.json</groupId>
             <artifactId>javax.json-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish</groupId>
-            <artifactId>javax.json</artifactId>
-            <version>1.0.4</version>
+            <version>1.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     
